# CG_Assignment01

./: CMakeLists.txt  REPORT.md
src/hull/: CMakeLists.txt  main.cpp
src/inside/: CMakeLists.txt  main.cpp
